--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,25 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
+        tools:context=".view.MainActivity"
         android:orientation="vertical">
 
     <include layout="@layout/titlebar" />
 
-    <ImageView
-            android:id="@+id/imageshow"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:orientation="vertical" >
+
+    <ImageView
+            android:id="@+id/imageshow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/grey"
             android:contentDescription="@string/the_image"/>
+
+    </LinearLayout>
 
     <include layout="@layout/bottombar" />
 
