--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.MainActivity"
-        android:orientation="vertical">
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <include layout="@layout/titlebar" />
-
+    <!-- main content view -->
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical" >
-
-    <ImageView
-            android:id="@+id/imageshow"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/grey"
-            android:contentDescription="@string/the_image"/>
+            tools:context=".view.MainActivity"
+            android:orientation="vertical">
+
+        <include layout="@layout/titlebar" />
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical" >
+
+            <ImageView
+                    android:id="@+id/imageshow"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/grey"
+                    android:contentDescription="@string/the_image"/>
+
+        </LinearLayout>
+
+        <include layout="@layout/bottombar" />
+
 
     </LinearLayout>
 
-    <include layout="@layout/bottombar" />
+    <!-- the navigation drawer -->
+    <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:menu="@menu/nav_menu"
+            app:headerLayout="@layout/nav_menu_layout"
+            />
 
-
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
