--- a/app/src/main/res/layout/titlebar.xml
+++ b/app/src/main/res/layout/titlebar.xml
@@ -3,14 +3,16 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
-    <Button
+    <ImageButton
             android:id="@+id/title_more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/titlebar_more"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
-    />
+            android:layout_margin="15dp"
+            android:src="@drawable/ic_drawer"
+            android:background="@color/white"
+            android:contentDescription="@string/titlebar_more"/>
 
     <TextView
             android:id="@+id/title_text"
@@ -23,13 +25,16 @@
             android:textSize="24sp"
     />
 
-    <Button
+    <ImageButton
             android:id="@+id/title_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:text="@string/titlebar_search"
+            android:src="@drawable/ic_action_search"
+            android:background="@color/white"
+            android:contentDescription="@string/titlebar_search"
     />
 
 </LinearLayout>
