--- a/app/src/main/res/layout/nav_header_upswitch.xml
+++ b/app/src/main/res/layout/nav_header_upswitch.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v7.widget.SearchView
-            android:id="@+id/search_view"
+    <Switch
+            android:id="@+id/nav_menu_item_up_chekbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:queryHint="Search image ..."
+            android:layout_margin="15dp"
+            android:text="@string/auto_update"
     />
+
 </LinearLayout>
