--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,8 +3,8 @@
     <group android:checkableBehavior="single">
 
     <item
-            android:title="about"
-            android:id="@+id/nav_about"
+            android:title="@string/more"
+            android:id="@+id/nav_more"
     />
 
     </group>
