--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,20 +17,11 @@
 
         <include layout="@layout/titlebar" />
 
-        <LinearLayout
+        <FrameLayout
+                android:id="@+id/fg_content"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="vertical" >
-
-            <ImageView
-                    android:id="@+id/imageshow"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/grey"
-                    android:contentDescription="@string/the_image"/>
-
-        </LinearLayout>
+                android:layout_weight="1" />
 
         <include layout="@layout/bottombar" />
 
