--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="grey">#F5F5F5</color>
     <color name="white">#ffffff</color>
+    <color name="text_black">#000</color>
+    <color name="text_grey">#F1F1F1</color>
 </resources>
