--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,9 +3,10 @@
     <group android:checkableBehavior="single">
 
     <item
-            android:title="@string/more"
-            android:id="@+id/nav_more"
-    />
+        android:id="@+id/nav_more"
+        android:checked="true"
+        android:checkable="true"
+        android:title="@string/more"/>
 
     </group>
 </menu>
