--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#ffffff</color>
     <color name="text_black">#000</color>
     <color name="text_grey">#F1F1F1</color>
+    <color name="semi_transparent">#88000000</color>
 </resources>
