--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,11 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <group android:checkableBehavior="single">
 
-    <item
-        android:id="@+id/nav_more"
-        android:checked="true"
-        android:checkable="true"
-        android:title="@string/more"/>
+        <item
+                android:id="@+id/nav_setting"
+                android:checkable="false"
+                android:title="@string/nav_setting"/>
+
+        <item
+                android:id="@+id/nav_more"
+                android:checkable="false"
+                android:title="@string/nav_more"/>
 
     </group>
 </menu>
