--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
             android:maxWidth="280dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            app:headerLayout="@layout/nav_header_upswitch"
+            app:headerLayout="@layout/nav_header"
             app:menu="@menu/nav_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
