--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,13 +6,6 @@
                 android:fitsSystemWindows="true"
                 android:background="@color/colorPrimary">
 
-    <!--<de.hdodenhof.circleimageview.CircleImageView-->
-            <!--android:id="@+id/icon_image"-->
-            <!--android:layout_width="70dp"-->
-            <!--android:layout_height="70dp"-->
-            <!--android:src="@drawable/nav_icon"-->
-            <!--android:layout_centerInParent="true" />-->
-
     <ImageView
             android:id="@+id/icon_image"
             android:layout_width="70dp"
@@ -23,10 +16,10 @@
             android:contentDescription="@string/app_icon"/>
 
     <TextView
-            android:id="@+id/app_name"
+            android:id="@+id/app_name_version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text="@string/app_name_version"
             android:layout_alignParentBottom="true"
             android:textColor="@color/white"
             android:textSize="16sp" />
