--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,13 +4,13 @@
                 android:layout_height="180dp"
                 android:padding="10dp"
                 android:fitsSystemWindows="true"
-                android:background="@color/colorPrimary">
+                android:background="@color/p">
 
     <ImageView
             android:id="@+id/icon_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@mipmap/launcher"
             android:layout_centerInParent="true"
             android:layout_alignParentStart="true"
             android:contentDescription="@string/app_icon"/>
