--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="text_black">#000</color>
     <color name="text_grey">#F1F1F1</color>
     <color name="semi_transparent">#88000000</color>
+    <color name="p">#AA00FF</color>
 </resources>
